--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   zope:
     image: python:3.11.1
+    restart: always
     build:
       dockerfile: zope-Dockerfile
       args:
@@ -9,6 +10,8 @@ services:
     volumes:
       - zope-data:/usr/local/share/ihs
       - backup:/backup
+    depends_on:
+      - db
     networks:
       main:
         aliases:
@@ -29,6 +32,7 @@ services:
 
   web:
     image: nginx:1.23.3
+    restart: always
     build:
       dockerfile: nginx-Dockerfile
       args:
@@ -46,6 +50,7 @@ services:
       - zope:zope
     depends_on:
       - zope
+      - phpmyadmin
     networks:
       main:
         aliases:
@@ -55,9 +60,11 @@ services:
     image: phpmyadmin:5.2.0
     restart: always
     ports:
-      - 127.0.0.1:8080:80
+      - 8088:80
     environment:
       MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+    depends_on:
+      - db
     networks:
       main:
         aliases:
