--- a/nginx_templates/default.conf.template
+++ b/nginx_templates/default.conf.template
@@ -1,41 +1,46 @@
 upstream docker-zope {
-    server zope:8080;
+	server zope:8080;
+}
+	
+upstream docker-phpmyadmin {
+	server phpmyadmin:80;
 }
 
 server {
-   	listen 80 default_server;
-    listen [::]:80 default_server;
+	
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+	location / {
+		return 301 https://$host$request_uri;
+	}
 }
 
 server {
 	listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+	listen [::]:443 ssl http2;
 
 	${NGINX_ALLOW}
 	deny all;	
 
 	ssl_certificate /etc/ssl/nginx/${NGINX_HOST}.crt;
-    ssl_certificate_key /etc/ssl/nginx/${NGINX_HOST}.key;
+	ssl_certificate_key /etc/ssl/nginx/${NGINX_HOST}.key;
 
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
-    ssl_session_tickets off;
+	ssl_session_timeout 1d;
+	ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+	ssl_session_tickets off;
 
-    # modern configuration
-    ssl_protocols TLSv1.3;
-    ssl_prefer_server_ciphers off;
+	# modern configuration
+	ssl_protocols TLSv1.3;
+	ssl_prefer_server_ciphers off;
 
-    # HSTS (ngx_http_headers_module is required) (63072000 seconds)
-    add_header Strict-Transport-Security "max-age=63072000" always;
+	# HSTS (ngx_http_headers_module is required) (63072000 seconds)
+	add_header Strict-Transport-Security "max-age=63072000" always;
 
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
+	# OCSP stapling
+	ssl_stapling on;
+	ssl_stapling_verify on;
 
 	server_name	${NGINX_HOST};
 
@@ -49,4 +54,9 @@ server {
 		proxy_pass http://docker-zope/VirtualHostBase/https/${NGINX_HOST}:443/;
 	}
 
+	location /mysql {
+		rewrite ^/mysql(/.*)$ $1 break;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_pass http://docker-phpmyadmin/;
+	}
 }
