Configuration, documentation and new zexp folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  db:
+    image: mariadb:10.10
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+    volumes:
+      - mariadb-data:/var/lib/mysql
+      - backup:/backup
+    networks:
+      main:
+        aliases:
+          - db
+
   zope:
     image: python:3.11.1
     restart: always
@@ -16,19 +29,21 @@ services:
       main:
         aliases:
           - zope
-
-  db:
-    image: mariadb:10.10
+  
+  phpmyadmin:
+    image: phpmyadmin:5.2.0
     restart: always
+    ports:
+      - 8088:80
     environment:
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
-    volumes:
-      - mariadb-data:/var/lib/mysql
-      - backup:/backup
+      MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+      PMA_ABSOLUTE_URI: https://${NGINX_HOST}/mysql/
+    depends_on:
+      - db
     networks:
       main:
         aliases:
-          - db
+          - phpmyadmin
 
   web:
     image: nginx:1.23.3
@@ -46,8 +61,6 @@ services:
     volumes:
       - ./nginx_templates:/etc/nginx/templates
       - ./ssl:/etc/ssl/nginx
-    links:
-      - zope:zope
     depends_on:
       - zope
       - phpmyadmin
@@ -55,20 +68,6 @@ services:
       main:
         aliases:
           - web
-
-  phpmyadmin:
-    image: phpmyadmin:5.2.0
-    restart: always
-    ports:
-      - 8088:80
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
-    depends_on:
-      - db
-    networks:
-      main:
-        aliases:
-          - phpmyadmin
 
 volumes:
   mariadb-data:
