--- a/.env-template
+++ b/.env-template
@@ -1,10 +1,10 @@
+# NGINX config
+NGINX_HOST="ihs.example.com"
+NGINX_ALLOW="allow 192.168.1.130; allow 192.168.2.0/24;"
+
 # Zope config
 ZOPE_VERSION="5.8"
 ZOPE_ROOT_PASSWORD="secret"
 
-# DB config
+# MariaDB config
 MARIADB_ROOT_PASSWORD="secret"
-
-# NETWORK config
-NGINX_HOST="ihs.example.com"
-NGINX_ALLOW="allow 192.168.1.130; allow 192.168.2.0/24;"
