--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   zope:
     image: python:3.11.1
     restart: always
+    ports:
+      - 127.0.0.1:8080:8080
     build:
       dockerfile: zope-Dockerfile
       args:
