--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   db:
     image: mariadb:10.10
     restart: always
+    ports:
+      - 127.0.0.1:3306:3306
     environment:
       MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
     volumes:
@@ -30,7 +32,7 @@ services:
     depends_on:
       - db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      test: ["CMD", "curl", "-f", "http://127.0.01:8080"]
     networks:
       main:
         aliases:
@@ -40,22 +42,23 @@ services:
     image: phpmyadmin:5.2.0
     restart: always
     ports:
-      - 8088:80
+      - 127.0.0.1:8088:8088
     environment:
       MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
       PMA_ABSOLUTE_URI: https://${NGINX_HOST}/mysql/
       UPLOAD_LIMIT: 1G
+      APACHE_PORT: 8088
     depends_on:
       - db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
+      test: ["CMD", "service", "apache2", "status"]
     networks:
       main:
         aliases:
           - phpmyadmin
 
   web:
-    image: nginx:1.23.3
+    image: nginx:1.25
     restart: always
     build:
       dockerfile: nginx-Dockerfile
