--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: mariadb:11.2
+    image: mariadb:${MARIADB_VERSION}
     restart: always
     ports:
       - 127.0.0.1:3306:3306
@@ -17,17 +17,21 @@ services:
           - db
 
   zope:
-    image: python:3.12
+    image: python:${PYTHON_VERSION}
     restart: always
     ports:
       - 127.0.0.1:8080:8080
     build:
       dockerfile: zope-Dockerfile
       args:
+        PYTHON_VERSION: ${PYTHON_VERSION}
+    environment:
         ZOPE_VERSION: ${ZOPE_VERSION}
         ZOPE_ROOT_PASSWORD: ${ZOPE_ROOT_PASSWORD}
+        PYTHON_VERSION: ${PYTHON_VERSION}
     volumes:
       - zope-data:/usr/local/share/ihs
+      - zope-filestorage:/usr/local/share/ihs/var/filestorage
       - backup:/backup
     depends_on:
       - db
@@ -39,7 +43,7 @@ services:
           - zope
   
   phpmyadmin:
-    image: phpmyadmin:5.2
+    image: phpmyadmin:${PHPMYADMIN_VERSION}
     restart: always
     ports:
       - 127.0.0.1:8088:8088
@@ -58,11 +62,12 @@ services:
           - phpmyadmin
 
   web:
-    image: nginx:1.25
+    image: nginx:${NGINX_VERSION}
     restart: always
     build:
       dockerfile: nginx-Dockerfile
       args:
+        NGINX_VERSION: ${NGINX_VERSION}
         NGINX_HOST: ${NGINX_HOST}
     ports:
       - 80:80
@@ -86,6 +91,7 @@ services:
 volumes:
   mariadb-data:
   zope-data:
+  zope-filestorage:
   backup:
 
 networks:
