Database timeout increased to one year. This fixes the corruption of the database connection every night.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - backup:/backup
     healthcheck:
       test: ["CMD", "/usr/local/bin/healthcheck.sh", "--connect"]
+    command: [
+      "--wait_timeout=31536000",
+      "--interactive_timeout=31536000"
+    ]
     networks:
       main:
         aliases:
